<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context="com.example.myapplication.MainActivity" >

<Button
        android:id="@+id/buttonRegister"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_below="@+id/textView2"
    android:layout_marginTop="10dp"
        app:backgroundTint="@color/shadowfight2" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_below="@+id/buttonRegister"
        app:backgroundTint="@color/shadowfight2"
        />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-medium"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome_to_trackact"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imageView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/intro"
        android:textAlignment="textStart"
        android:textColor="@android:color/tertiary_text_light"
        android:textSize="18sp"
        android:layout_below="@+id/textView1"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:translationY="20dp"
        app:srcCompat="@drawable/homepagelogo"
        android:contentDescription="@string/todo" />


</RelativeLayout>